--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Personal Website ;)</title>
+	<title>Victor Soto</title>
 </head>
 <body>
+
+	<h1> Victor Soto <h1>
 
 </body>
 </html>
