--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Victor Soto</title>
-</head>
-<body>
+<!-- Bootstrap -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="css/resume.css"
 
-	<h1> Victor Soto <h1>
+
+<head>
+	<div>	
+	<title>Victor Soto</title>
+	</div>
+</head>
+
+<body>
+	<h1 class="text-center">Victor Soto</h1>
+
+	<div class="row">
+		<div class="column left">
+			<h3>About</h3>
+			<h3>Education</h3>
+			<h3>Experience</h3>
+			<h3>Skills</h3>
+						
+		</div>
+		<div class="column right">
+			<p>blahblahblah</p>
+		</div>
+	</div>
+	
+
+
+
 
 </body>
+
 </html>
