--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 
 <body>
 	<h1 class="text-center">Victor Soto</h1>
-
+	<div class="text-center subheading mb-5">1695 Playfair dr &#8226; Ottawa, ON &#8226; (613) 255-5164 <br>  	
+            <a href="mailto:vsoto26@gmail.com">vsoto26@gmail.com</a>
+          </div>
 	<div class="row">
 		<div class="column left">
 			<h3>About</h3>
 			<h3>Education</h3>
 			<h3>Experience</h3>
 			<h3>Skills</h3>
-						
+
 		</div>
 		<div class="column right">
 			<p>blahblahblah</p>
