--- a/_education/education.html
+++ b/_education/education.html
@@ -9,9 +9,9 @@ redirect_from:
 
 {% include base_path %}
 <h3>B.S. in Electronics and Telecommunications Engineering, University of Guadalajara, 2013</h3>
-<u>Thesis:</u> "Mobility Oriented Data Retrieval for Computation Offloading in Vehicular Edge Computing"  
-_Relevant Courses:_ Computer Networks, Protocols & Standards, High-frequency Electronics, Audio & Video Systems
+<u>Thesis:</u> "Mobility Oriented Data Retrieval for Computation Offloading in Vehicular Edge Computing"<br>  
+<u>Relevant Courses:</u> Computer Networks, Protocols & Standards, High-frequency Electronics, Audio & Video Systems<br>
 
-MASc in Electrical and Computer Engineering, University of Ottawa, 2018
-Thesis: "Design and Implementation of a 2.45GHz Wearable Antenna"  
-Relevant Courses:_ Distributed Systems Engineering, Intelligent Transportation Systems, Discrete-event Modeling & Simulation, Resource Management on Distributed Systems
+<h3>MASc in Electrical and Computer Engineering, University of Ottawa, 2018</h3>
+<u>Thesis:</u> "Design and Implementation of a 2.45GHz Wearable Antenna"<br>
+<u>Relevant Courses:</u> Distributed Systems Engineering, Intelligent Transportation Systems, Discrete-event Modeling & Simulation, Resource Management on Distributed Systems
