--- a/_education/education.html
+++ b/_education/education.html
@@ -8,7 +8,7 @@ redirect_from:
 ---
 
 {% include base_path %}
-<h3>B.S. in Electronics and Telecommunications Engineering, University of Guadalajara, 2013</h3>
+<h3>BASc. in Electronics and Telecommunications Engineering, University of Guadalajara, 2013</h3>
 <u>Thesis:</u> "Mobility Oriented Data Retrieval for Computation Offloading in Vehicular Edge Computing"<br>  
 <u>Relevant Courses:</u> Computer Networks, Protocols & Standards, High-frequency Electronics, Audio & Video Systems<br>
 
