--- a/_skills/skills.html
+++ b/_skills/skills.html
@@ -9,8 +9,8 @@ redirect_from:
 
 {% include base_path %}
 
-**Programming Languages** 
-: Python, C/C++, Java, Bash (Command) 
+<h3>Programming Languages</h3> 
+Python, C/C++, Java, Bash (Command) 
 
 **Operating Systems** 
 :   Windows, Linux 
