--- a/_skills/skills.html
+++ b/_skills/skills.html
@@ -9,32 +9,32 @@ redirect_from:
 
 {% include base_path %}
 
-<h3>Programming Languages</h3> 
+<b>Programming Languages</b> 
 Python, C/C++, Java, Bash (Command) 
 
-**Operating Systems** 
-:   Windows, Linux 
+<b>Operating Systems</b> 
+Windows, Linux 
 
-**IDE** 
-:   Eclipse, PyCharm, Visual Studio
+<b>IDE</b>
+Eclipse, PyCharm, Visual Studio
 
-**Version Control Tools**
-:   Git
+<b>Version Control Tools</b>
+Git
 
-**Network Protocols**
-:   TCP/IP, UDP, HTTPS, MPLS, VoIP, SIP, DSRC, WSM
+<b>Network Protocols</b>
+TCP/IP, UDP, HTTPS, MPLS, VoIP, SIP, DSRC, WSM
 
-**Data Science Libraries**
-:   NumPy, SciPy
+<b>Data Science Libraries</b>
+NumPy, SciPy
 
-**Network Management**
-:   Wireshark
+<b>Network Management</b>
+Wireshark
 
-**Web/Front End Libraries**
-:   HTML, CSS, JavaScript, jQuery, Bootstrap, React, Redux
+<b>Web/Front End Libraries</b>
+HTML, CSS, JavaScript, jQuery, Bootstrap, React, Redux
 
-**Virtualization Technologies**
-:   Oracle Virtual Box, VMware
+<b>Virtualization Technologies</b>
+Oracle Virtual Box, VMware
 
-**Lab Skills**
-:   Digital/Analog Scopes, Spectrum Analyzer, Function Generators
+<b>Lab Skills</b>
+Digital/Analog Scopes, Spectrum Analyzer, Function Generators
