--- a/_skills/skills.html
+++ b/_skills/skills.html
@@ -9,32 +9,32 @@ redirect_from:
 
 {% include base_path %}
 
-<b>Programming Languages</b> <br>
+<b>Programming Languages:</b> <br>
 Python, C/C++, Java, Bash (Command)<br> 
 
-<b>Operating Systems</b> <br>
+<b>Operating Systems:</b> <br>
 Windows, Linux <br>
 
-<b>IDE</b><br>
+<b>IDE:</b><br>
 Eclipse, PyCharm, Visual Studio<br>
 
-<b>Version Control Tools</b><br>
+<b>Version Control Tools:</b><br>
 Git<br>
 
-<b>Network Protocols</b><br>
+<b>Network Protocols:</b><br>
 TCP/IP, UDP, HTTPS, MPLS, VoIP, SIP, DSRC, WSM<br>
 
-<b>Data Science Libraries</b><br>
+<b>Data Science Libraries:</b><br>
 NumPy, SciPy<br>
 
-<b>Network Management</b><br>
+<b>Network Management:</b><br>
 Wireshark<br>
 
-<b>Web/Front End Libraries</b><br>
+<b>Web/Front End Libraries:</b><br>
 HTML, CSS, JavaScript, jQuery, Bootstrap, React, Redux<br>
 
-<b>Virtualization Technologies</b><br>
+<b>Virtualization Technologies:</b><br>
 Oracle Virtual Box, VMware<br>
 
-<b>Lab Skills</b><br>
+<b>Lab Skills:</b><br>
 Digital/Analog Scopes, Spectrum Analyzer, Function Generators<br>
