--- a/_experience/experience.html
+++ b/_experience/experience.html
@@ -10,16 +10,44 @@ redirect_from:
 {% include base_path %}
 
 <h2>Research Assistant, PARADISE Research Laboratory</h2>
-University of Ottawa
-Ottawa, ON
-2016 - Present
-– Researched, designed, developed routing protocols for vehicular networks as part of the NSERC DIVA
+University of Ottawa Jul 2016 - Present
+<u>Technologies:</u> Python, C/C++, OMNET++, SUMO, VEINS Framework, HTML
+– Researched, designed, and developed a collection of communication and routing
+protocols for vehicular networks (V2V, V2I, V2X) as part of the NSERC DIVA
 Strategic Research Network and NSERC CREATE TRANSIT Program.
-– Implemented protocols using C/C++ programming language within network simulation software
-OMNET++, SUMO and VEINS
-– Verified accuracy and completeness of designed protocols by preparing sample data, and testing them using
-analytical tools (Python).
-
-
-
+– Implemented parsing algorithms for Data Analysis using Python Data Sciences
+libraries.
 <a href="/publications">Publications</a>
+
+
+<h2> TEACHING ASSISTANT</h2>
+University of Ottawa  Jan 2017 – Dec 2017
+<u>Technologies:</u> MATLAB, Python, Arduino, Raspberry Pi
+Electrical Engineering Design Project: Part I & II
+– Conducted Practical Labs for both subjects.
+– Assisted and guided students through the design, development and testing of an
+innovative electrical design project.
+– Provided support on creating a business model and filling a patent application.
+– Evaluated students and provided feedback on technical issues and writing skills.
+
+<h2>RADIOLOGY & IMAGING SERVICE ENGINEER</h2>
+EYMSA Aug 2014 – Dec 2015
+<u>Technologies:</u> TCP/IP, DNS, OSCILLOSCOPE,
+– Installed, configured and provided maintenance of medical equipment and LAN/WLAN
+hardware.
+– Guided training sessions for customers and technicians.
+– Acted as a technical expert in the medical equipment acquisition committees at
+public and private hospitals.
+– Managed the implementation of new technology in alignment with various clinical
+services requirements.
+
+<h2>MEDICAL PARTS MX</h2>
+ Aug 2013 – Jul 2014
+<u>Technologies: </u> FUNCTION GENERATOR, ASSEMBLY, JAVASCRIPT, HTML, CSS,
+– Reviewed and prepared of medical equipment maintenance contract.
+– Installed and provided maintenance of medical equipment.
+– Developed and maintained a product and services Web Site using JavaScript, HTML,
+CSS.
+– Developed plans for the adaption, deployment, upgrade or integration of medical
+technologies and associated processes
+– Supervised Biomedical Engineering interns.
