--- a/_experience/experience.html
+++ b/_experience/experience.html
@@ -10,18 +10,20 @@ redirect_from:
 {% include base_path %}
 
 <h2>Research Assistant, PARADISE Research Laboratory</h2>
-University of Ottawa Jul 2016 - Present
-<u>Technologies:</u> Python, C/C++, OMNET++, SUMO, VEINS Framework, HTML
-– Researched, designed, and developed a collection of communication and routing
+University of Ottawa Jul 2016 - Present<br>
+<u>Technologies:</u> Python, C/C++, OMNET++, SUMO, VEINS Framework, HTML<br>
+<ul>
+<li> Researched, designed, and developed a collection of communication and routing
 protocols for vehicular networks (V2V, V2I, V2X) as part of the NSERC DIVA
-Strategic Research Network and NSERC CREATE TRANSIT Program.
-– Implemented parsing algorithms for Data Analysis using Python Data Sciences
-libraries.
+Strategic Research Network and NSERC CREATE TRANSIT Program.</li>
+<li> Implemented parsing algorithms for Data Analysis using Python Data Sciences
+libraries.</li>
+</ul>
 <a href="/publications">Publications</a>
 
 
-<h2> TEACHING ASSISTANT</h2>
-University of Ottawa  Jan 2017 – Dec 2017
+<h2> Teaching Assistant</h2>
+University of Ottawa,  Jan 2017 – Dec 2017
 <u>Technologies:</u> MATLAB, Python, Arduino, Raspberry Pi
 Electrical Engineering Design Project: Part I & II
 – Conducted Practical Labs for both subjects.
@@ -30,8 +32,8 @@ innovative electrical design project.
 – Provided support on creating a business model and filling a patent application.
 – Evaluated students and provided feedback on technical issues and writing skills.
 
-<h2>RADIOLOGY & IMAGING SERVICE ENGINEER</h2>
-EYMSA Aug 2014 – Dec 2015
+<h2>Radiology & Imaging Service Engineer</h2>
+EYMSA, Aug 2014 – Dec 2015
 <u>Technologies:</u> TCP/IP, DNS, OSCILLOSCOPE,
 – Installed, configured and provided maintenance of medical equipment and LAN/WLAN
 hardware.
@@ -41,8 +43,8 @@ public and private hospitals.
 – Managed the implementation of new technology in alignment with various clinical
 services requirements.
 
-<h2>MEDICAL PARTS MX</h2>
- Aug 2013 – Jul 2014
+<h2>Service Engineer</h2>
+MEDICAL PARTS MX, Aug 2013 – Jul 2014
 <u>Technologies: </u> FUNCTION GENERATOR, ASSEMBLY, JAVASCRIPT, HTML, CSS,
 – Reviewed and prepared of medical equipment maintenance contract.
 – Installed and provided maintenance of medical equipment.
