--- a/_experience/experience.html
+++ b/_experience/experience.html
@@ -10,7 +10,7 @@ redirect_from:
 {% include base_path %}
 
 <h2>Research Assistant, PARADISE Research Laboratory</h2>
-University of Ottawa Jul 2016 - Present<br>
+University of Ottawa Jul 2016 – Present<br>
 <u>Technologies:</u> Python, C/C++, OMNET++, SUMO, VEINS Framework, HTML<br>
 <ul>
 <li> Researched, designed, and developed a collection of communication and routing
@@ -23,33 +23,41 @@ libraries.</li>
 
 
 <h2> Teaching Assistant</h2>
-University of Ottawa,  Jan 2017 – Dec 2017
-<u>Technologies:</u> MATLAB, Python, Arduino, Raspberry Pi
-Electrical Engineering Design Project: Part I & II
-– Conducted Practical Labs for both subjects.
-– Assisted and guided students through the design, development and testing of an
-innovative electrical design project.
-– Provided support on creating a business model and filling a patent application.
-– Evaluated students and provided feedback on technical issues and writing skills.
+University of Ottawa,  Jan 2017 <li> Dec 2017<br>
+<u>Technologies:</u> MATLAB, Python, Arduino, Raspberry Pi<br>
+Electrical Engineering Design Project: Part I & II<br>
+<ul>
+<li> Conducted Practical Labs for both subjects.</li>
+<li> Assisted and guided students through the design, development and testing of an
+innovative electrical design project.</li>
+<li> Provided support on creating a business model and filling a patent application.</li>
+<li> Evaluated students and provided feedback on technical issues and writing skills.</li>
+</ul>
+
 
 <h2>Radiology & Imaging Service Engineer</h2>
-EYMSA, Aug 2014 – Dec 2015
-<u>Technologies:</u> TCP/IP, DNS, OSCILLOSCOPE,
-– Installed, configured and provided maintenance of medical equipment and LAN/WLAN
-hardware.
-– Guided training sessions for customers and technicians.
-– Acted as a technical expert in the medical equipment acquisition committees at
-public and private hospitals.
-– Managed the implementation of new technology in alignment with various clinical
-services requirements.
+EYMSA, Aug 2014 – Dec 2015<br>
+<u>Technologies:</u> TCP/IP, DNS, OSCILLOSCOPE,<br>
+<ul>
+<li> Installed, configured and provided maintenance of medical equipment and LAN/WLAN
+hardware.</li>
+<li> Guided training sessions for customers and technicians.</li>
+<li> Acted as a technical expert in the medical equipment acquisition committees at
+public and private hospitals.</li>
+<li> Managed the implementation of new technology in alignment with various clinical
+services requirements.</li>
+</ul>
+
 
 <h2>Service Engineer</h2>
-MEDICAL PARTS MX, Aug 2013 – Jul 2014
+Medical Parts Mx, Aug 2013 – Jul 2014<br>
 <u>Technologies: </u> FUNCTION GENERATOR, ASSEMBLY, JAVASCRIPT, HTML, CSS,
-– Reviewed and prepared of medical equipment maintenance contract.
-– Installed and provided maintenance of medical equipment.
-– Developed and maintained a product and services Web Site using JavaScript, HTML,
-CSS.
-– Developed plans for the adaption, deployment, upgrade or integration of medical
-technologies and associated processes
-– Supervised Biomedical Engineering interns.
+<ul>
+<li> Reviewed and prepared of medical equipment maintenance contract.</li>
+<li> Installed and provided maintenance of medical equipment.</li>
+<li> Developed and maintained a product and services Web Site using JavaScript, HTML,
+CSS.</li>
+<li> Developed plans for the adaption, deployment, upgrade or integration of medical
+technologies and associated processes</li>
+<li> Supervised Biomedical Engineering interns.</li>
+</ul>
