--- a/_experience/experience.html
+++ b/_experience/experience.html
@@ -23,7 +23,7 @@ libraries.</li>
 
 
 <h2> Teaching Assistant</h2>
-University of Ottawa,  Jan 2017 <li> Dec 2017<br>
+University of Ottawa,  Jan 2017 – Dec 2017<br>
 <u>Technologies:</u> MATLAB, Python, Arduino, Raspberry Pi<br>
 Electrical Engineering Design Project: Part I & II<br>
 <ul>
@@ -37,7 +37,7 @@ innovative electrical design project.</li>
 
 <h2>Radiology & Imaging Service Engineer</h2>
 EYMSA, Aug 2014 – Dec 2015<br>
-<u>Technologies:</u> TCP/IP, DNS, OSCILLOSCOPE,<br>
+<u>Technologies:</u> TCP/IP, DNS, Oscilloscope,<br>
 <ul>
 <li> Installed, configured and provided maintenance of medical equipment and LAN/WLAN
 hardware.</li>
@@ -51,7 +51,7 @@ services requirements.</li>
 
 <h2>Service Engineer</h2>
 Medical Parts Mx, Aug 2013 – Jul 2014<br>
-<u>Technologies: </u> FUNCTION GENERATOR, ASSEMBLY, JAVASCRIPT, HTML, CSS,
+<u>Technologies: </u> Function Generator, Assembly, Javascript, HTML, CSS,
 <ul>
 <li> Reviewed and prepared of medical equipment maintenance contract.</li>
 <li> Installed and provided maintenance of medical equipment.</li>
