--- a/_personal/personal.html
+++ b/_personal/personal.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Personal Projects"
+title: "Personal Interests"
 permalink: /personal/
 author_profile: true
 redirect_from:
@@ -9,6 +9,10 @@ redirect_from:
 
 {% include base_path %}
 
+<h2>Information Security and CTF Challenges</h2>
+OverTheWire<br>
+PicoCTF<br>
+<br>
 <h2>Mitacs Professional Workshops</h2><br>
 Time Management <br>
 Practical Tips on Growing Your Network <br>
