--- a/_publications/publications.html
+++ b/_publications/publications.html
@@ -11,4 +11,4 @@ redirect_from:
 <h3>REPRO: Time-constrained Data Retrieval for Edge Offloading in Vehicular Clouds</h3>
 Published in Proceedings of the 14th ACM Symposium on Performance Evaluation of Wireless Ad Hoc, Sensor, & Ubiquitous Networks, 2017 <br>
 <br>
-<a href="https://dl.acm.org/citation.cfm?id=3134834">Download paper and citations here</a>
+<a href="https://dl.acm.org/citation.cfm?id=3134834"><u>Download paper and citations here</u></a>
