--- a/_experience/experience.html
+++ b/_experience/experience.html
@@ -9,8 +9,18 @@ redirect_from:
 
 {% include base_path %}
 
+<h2>Software Engineer, Motorola Solutions</h2>
+Gatineau, QC Jun 2019 – Present<br>
+<u>Technologies:</u> Python, C/C++, OMNET++, SUMO, VEINS Framework, HTML<br>
+<ul>
+<li> Integration of end to end elements (front-end and back-end)</li>
+<li> Proficient in multiple programming languages, frameworks, domains, and tools such as: Java, Quarkus Framework, JSON, REST, API.</li>
+<li> Built cloud infrastructure using Infrastructure as Code/Automation tools such as: Microsoft Azure/Azure DevOps, Kubernetes, Docker, Terraform.</li>
+<li> Setup full CI/CD pipelines so that each commit a developer makes will go through standard process of software life cycle and gets tested well enough before it can make it to the production. </li>  
+</ul>
+
 <h2>Research Assistant, PARADISE Research Laboratory</h2>
-University of Ottawa Jul 2016 – Present<br>
+University of Ottawa Jul 2016 – Dec 2018<br>
 <u>Technologies:</u> Python, C/C++, OMNET++, SUMO, VEINS Framework, HTML<br>
 <ul>
 <li> Researched, designed, and developed a collection of communication and routing
