--- a/_skills/skills.html
+++ b/_skills/skills.html
@@ -10,25 +10,37 @@ redirect_from:
 {% include base_path %}
 
 <b>Programming Languages:</b> <br>
-Python, C/C++, Java, Bash (Command)<br> 
+Java, Python, C/C++, Bash (Script) <br> 
 
 <b>Operating Systems:</b> <br>
-Windows, Linux <br>
+Linux, Windows<br>
+
+<b>Cloud platforms:</b><br>
+Microsoft Azure<br>
 
 <b>IDE:</b><br>
 Eclipse, PyCharm, Visual Studio<br>
+
+<b>Automation/Build:</b><br>
+Kubernetes, Docker, Terraform, Azure DevOps<br>
 
 <b>Version Control Tools:</b><br>
 Git<br>
 
 <b>Network Protocols:</b><br>
-TCP/IP, UDP, HTTPS, MPLS, VoIP, SIP, DSRC, WSM<br>
+TCP/IP, UDP, HTTPS, MPLS, VoIP, SIP, DSRC, WSM, WebRTC<br>
 
 <b>Data Science Libraries:</b><br>
 NumPy, SciPy<br>
 
+<b>Software Development Life Cycle:</b><br>
+Agile, Scrum<br>
+
 <b>Network Management:</b><br>
 Wireshark<br>
+
+<b>Dynamic Analysis Security Testing:</b><br>
+Burpsuite<br>
 
 <b>Web/Front End Libraries:</b><br>
 HTML, CSS, JavaScript, jQuery, Bootstrap, React, Redux<br>
