Updates + fix technologies

--- a/_experience/experience.html
+++ b/_experience/experience.html
@@ -11,7 +11,7 @@ redirect_from:
 
 <h2>Software Engineer, Motorola Solutions</h2>
 Gatineau, QC Jun 2019 – Present<br>
-<u>Technologies:</u> Python, C/C++, OMNET++, SUMO, VEINS Framework, HTML<br>
+<u>Technologies:</u> Microsoft Azure, Kubernetes, Azure Devops, Docker, Terraform, Linux, Java,   SIP, GStreamer, Kurento Media Server, WebRTC<br>
 <ul>
 <li> Integration of end to end elements (front-end and back-end)</li>
 <li> Proficient in multiple programming languages, frameworks, domains, and tools such as: Java, Quarkus Framework, JSON, REST, API.</li>
