--- a/_personal/personal.html
+++ b/_personal/personal.html
@@ -9,7 +9,7 @@ redirect_from:
 
 {% include base_path %}
 
-<h2>Information Security and CTF Challenges</h2>
+<h2>Cyber Security and CTF Challenges (write-ups coming)</h2>
 OverTheWire<br>
 PicoCTF<br>
 <br>
