--- a/_publications/publications.html
+++ b/_publications/publications.html
@@ -8,7 +8,13 @@ redirect_from:
 ---
 
 {% include base_path %}
+
+<h3>An Efficient Mobility-Oriented Retrieval Protocol for Computation Offloading in Vehicular Edge Multi-Access Network</h3>
+Published in: IEEE Transactions on Intelligent Transportation Systems ( Volume: 21 , Issue: 6 , June 2020 )  <br>
+<br>
+<a href="https://ieeexplore.ieee.org/document/9091944"><u>Download paper and citations here</u></a>
+
 <h3>REPRO: Time-constrained Data Retrieval for Edge Offloading in Vehicular Clouds</h3>
-Published in Proceedings of the 14th ACM Symposium on Performance Evaluation of Wireless Ad Hoc, Sensor, & Ubiquitous Networks, 2017 <br>
+Published in: Proceedings of the 14th ACM Symposium on Performance Evaluation of Wireless Ad Hoc, Sensor, & Ubiquitous Networks, 2017 <br>
 <br>
 <a href="https://dl.acm.org/citation.cfm?id=3134834"><u>Download paper and citations here</u></a>
